--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" name="name" content="content">
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
-  <script src="/javascripts/main.js" type="text/javascript" charset="utf-8" async defer></script>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <script src="javascripts/main.js" type="text/javascript" defer></script>
   <title>
     Javascript コードレシピ集
   </title>
